.toList() is shit